# nvim-rs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md  appveyor.yml  bench_examples.vim  build.rs  neovim_build.ps1  pull_request_template.md  rustfmt.toml
.github/workflows/: ci.yml  doc.sh  doc.yml
benches/: rpc.rs  rpc_tokio.rs
bindings/: generate_bindings.py  neovim_api.rs
examples/: basic.rs  bench_async-std.rs  bench_gio.rs  bench_smol.rs  bench_sync.rs  bench_tokio.rs  handler_drop.rs  nested_requests.rs  quitting.rs  quitting_gio.rs  scorched_earth.rs  scorched_earth_as.rs  scorched_earth_gio.rs  scorched_earth_smol.rs
src/: callerror.rs  create.rs  error.rs  lib.rs  neovim.rs  neovim_api.rs  neovim_api_manual.rs  runtime.rs  uioptions.rs
src/compat/: mod.rs  tokio.rs
src/create/: async_std.rs  gio.rs  mod.rs  smol.rs  tokio.rs
src/examples/: README.md  handler_drop.rs  mod.rs  quitting.rs  scorched_earth.rs  scorched_earth_as.rs
src/exttypes/: buffer.rs  mod.rs  tabpage.rs  window.rs
src/rpc/: handler.rs  mod.rs  model.rs  requester.rs  unpack.rs
tests/: basic.rs  connections.rs  lib.rs  nested_requests.rs  nested_requests_gio.rs  notifications.rs
tests/common/: mod.rs
tests/connecting/: conns.rs  handshake.rs  mod.rs
tests/regression/: buffering.rs  mod.rs
use_async-std/: crates.js  help.html  search-index.js  settings.html  src-files.js
use_async-std/linebuffercrash_as/: all.html  fn.main.html  index.html
use_async-std/nvim_rs/: all.html  enum.Value.html  index.html  macro.impl_exttype_traits!.html  macro.impl_exttype_traits.html  sidebar-items.js
use_async-std/nvim_rs/create/: fn.unbuffered_stdout.html  index.html  sidebar-items.js  trait.Spawner.html
use_async-std/nvim_rs/create/async_std/: fn.new_parent.html  fn.new_path.html  fn.new_tcp.html  index.html  sidebar-items.js
use_async-std/nvim_rs/error/: enum.CallError.html  enum.DecodeError.html  enum.EncodeError.html  enum.InvalidMessage.html  enum.LoopError.html  index.html  sidebar-items.js
use_async-std/nvim_rs/examples/: index.html  sidebar-items.js
use_async-std/nvim_rs/examples/handler_drop/: index.html
use_async-std/nvim_rs/examples/quitting/: index.html
use_async-std/nvim_rs/examples/scorched_earth/: index.html
use_async-std/nvim_rs/examples/scorched_earth_as/: index.html
use_async-std/nvim_rs/exttypes/: index.html  sidebar-items.js  struct.Buffer.html  struct.Tabpage.html  struct.Window.html
use_async-std/nvim_rs/exttypes/tabpage/: struct.Tabpage.html
use_async-std/nvim_rs/neovim/: sidebar-items.js  struct.Neovim.html
use_async-std/nvim_rs/neovim_api_manual/: index.html
use_async-std/nvim_rs/rpc/: enum.Value.html  index.html  sidebar-items.js
use_async-std/nvim_rs/rpc/handler/: index.html  sidebar-items.js  struct.Dummy.html  trait.Handler.html
use_async-std/nvim_rs/rpc/model/: enum.RpcMessage.html  index.html  sidebar-items.js  trait.IntoVal.html
use_async-std/nvim_rs/rpc/unpack/: sidebar-items.js
use_async-std/nvim_rs/uioptions/: enum.UiOption.html  index.html  sidebar-items.js  struct.UiAttachOptions.html
use_async-std/src/linebuffercrash_as/: linebuffercrash_as.rs.html
use_async-std/src/nvim_rs/: error.rs.html  neovim_api.rs.html  uioptions.rs.html
use_async-std/src/nvim_rs/create/: async_std.rs.html  mod.rs.html
use_async-std/src/nvim_rs/examples/: handler_drop.rs.html  quitting.rs.html  scorched_earth_as.rs.html
use_async-std/src/nvim_rs/rpc/: handler.rs.html
use_async-std/trait.impl/core/clone/: trait.Clone.js
use_async-std/trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
use_async-std/trait.impl/core/convert/: trait.From.js
use_async-std/trait.impl/core/error/: trait.Error.js
use_async-std/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
use_async-std/trait.impl/core/marker/: trait.Send.js  trait.Sync.js
use_tokio/: crates.js  help.html  search-index.js  settings.html  src-files.js
use_tokio/linebuffercrash/: all.html  fn.main.html  index.html
use_tokio/nvim_rs/: all.html  enum.Value.html  index.html  macro.call_args.html  sidebar-items.js
use_tokio/nvim_rs/compat/: index.html
use_tokio/nvim_rs/compat/tokio/: index.html  sidebar-items.js  struct.Compat.html
use_tokio/nvim_rs/create/: index.html  sidebar-items.js  trait.Spawner.html
use_tokio/nvim_rs/create/tokio/: fn.new_child.html  fn.new_child_cmd.html  fn.new_child_path.html  fn.new_parent.html  fn.new_path.html  fn.new_tcp.html  index.html  sidebar-items.js
use_tokio/nvim_rs/error/: enum.CallError.html  enum.DecodeError.html  enum.EncodeError.html  enum.InvalidMessage.html  enum.LoopError.html
use_tokio/nvim_rs/examples/handler_drop/: index.html
use_tokio/nvim_rs/examples/scorched_earth/: index.html
use_tokio/nvim_rs/exttypes/: struct.Buffer.html  struct.Tabpage.html  struct.Window.html
use_tokio/nvim_rs/exttypes/buffer/: struct.Buffer.html
use_tokio/nvim_rs/exttypes/window/: struct.Window.html
use_tokio/nvim_rs/neovim/: index.html  struct.Neovim.html
use_tokio/nvim_rs/neovim_api/: index.html
use_tokio/nvim_rs/rpc/: enum.Value.html
use_tokio/nvim_rs/rpc/handler/: struct.Dummy.html
use_tokio/nvim_rs/rpc/model/: enum.RpcMessage.html  fn.decode.html  fn.encode.html
use_tokio/nvim_rs/rpc/unpack/: index.html  trait.TryUnpack.html
use_tokio/nvim_rs/uioptions/: enum.UiOption.html  struct.UiAttachOptions.html
use_tokio/src/linebuffercrash/: linebuffercrash.rs.html
use_tokio/src/nvim_rs/: lib.rs.html  neovim.rs.html  neovim_api_manual.rs.html
use_tokio/src/nvim_rs/create/: tokio.rs.html
use_tokio/src/nvim_rs/examples/: mod.rs.html  scorched_earth.rs.html
use_tokio/src/nvim_rs/exttypes/: buffer.rs.html  mod.rs.html  tabpage.rs.html  window.rs.html
use_tokio/src/nvim_rs/rpc/: mod.rs.html  model.rs.html  unpack.rs.html
use_tokio/trait.impl/core/clone/: trait.Clone.js
use_tokio/trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
use_tokio/trait.impl/core/convert/: trait.From.js
use_tokio/trait.impl/core/default/: trait.Default.js
(+9 files in other folders)
