[package]
name = "nvim-rs"
version = "0.6.0-pre"
license = "LGPL-3.0"
authors = ["KillTheMule <KillTheMule@users.noreply.github.com"]
description = "A library for writing neovim rpc clients"
repository = "https://github.com/KillTheMule/nvim-rs"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["neovim", "nvim", "rpc", "msgpack"]
exclude = [
  "neovim/*",
  ".travis.yml",
  "appveyor.yml",
  ".git",
  ".gitignore",
  ".gitmodules",
  "build.ps1"
]
edition = "2021"

[features]
use_tokio = ["tokio", "tokio-util", "parity-tokio-ipc"]
use_async-std = ["async-std"]
use_neovim_lib = ["neovim-lib"]

[package.metadata.docs.rs]
features = ["use_tokio"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
bench = false

[dependencies]
rmp = "0.8.12"
rmpv = "1.0.1"
log = "0.4.20"
async-trait = "0.1.73"
futures = { version = "0.3.28", features = ["io-compat"] }
tokio = { version = "1.32.0", features = ["full"] , optional = true}
tokio-util = { version = "0.7.8", features = ["compat"], optional = true }
async-std = { version = "1.12.0", features = ["attributes"], optional = true }
neovim-lib = { version = "0.6.1", optional = true }
parity-tokio-ipc = { version = "0.9.0", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = '*', features = ["winerror"] }

[dev-dependencies]
tempfile = "3.8.0"
# TODO: if changing tempfile: the rand version is based on whatever version
# tempfile is using, to deduplicate dependencies
fastrand = "2.0.0"
criterion = "0.5.1"

[profile.bench]
lto = true
debug = true

[[bench]]
name = "rpc_tokio"
harness = false
required-features = ["use_tokio"]

[[example]]
name = "handler_drop"
required-features = ["use_tokio"]

[[example]]
name = "quitting"
required-features = ["use_tokio"]

[[example]]
name = "scorched_earth"
required-features = ["use_tokio"]

[[example]]
name = "basic"
required-features = ["use_tokio"]

[[example]]
name = "bench_tokio"
required-features = ["use_tokio"]

[[example]]
name = "bench_async-std"
required-features = ["use_async-std"]

[[example]]
name = "bench_sync"
required-features = ["use_neovim_lib"]

[[example]]
name = "scorched_earth_as"
required-features = ["use_async-std"]

[[example]]
name = "nested_requests"
required-features = ["use_tokio"]

[[test]]
name = "nested_requests"
required-features = ["use_tokio"]

[[test]]
name = "connecting"
path = "tests/connecting/mod.rs"

[[test]]
name = "notifications"
required-features = ["use_tokio"]

[[test]]
name = "basic"

[[test]]
name = "regression"
path = "tests/regression/mod.rs"

[[bin]]
name = "linebuffercrash"
required-features = ["use_tokio"]

[[bin]]
name = "linebuffercrash_as"
required-features = ["use_async-std"]
